<resources>
    <string name="app_name">Dhiti Foundation</string>
    <string name="adapter_dp_transition">adapter dp transition</string>
    <string name="adapter_name">adapter name</string>
    <string name="adapter_date">adapter date</string>
    <string name="adapter_category">adapter category</string>
    <string name="adapter_city">adapter city</string>
    <string name="adapter_content">adapter content</string>
    <string name="adapter_pdf">adapter pdf</string>
    <string name="adapter_image">adapter image</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="googlesign">googlesign</string>
    <string name="or">or</string>
    <string name="enter_number_here">Phone number</string>
    <string name="google">Google Sign IN</string>
    <string name="otp_code">Verify Code</string>
    <string name="proceed">Request OTP</string>
    <string name="verification">Verification Code</string>
    <string name="code_verify_message">We have sent the code verification to <br>Your Mobile Number</br> </string>
    <string name="number">+91 8917204352</string>
    <string name="location">Location</string>
    <string name="location_">Location *</string>
    <string name="bilaspur_is_known_for_its_aromatic_rice_variety_named_doobraj_rice"><b>Bilaspur</b> is known for its Aromatic Rice variety named ‘Doobraj’ rice.</string>
    <string name="tap_to_select_your_location">(Tap on Image to select your Location)</string>
    <string name="korba_is_known_for_its_coal_mines_such_as_gevra_area_one_of_the_biggest_coal_mines_of_asia_kusmunda_area_and_dipka_area_all_located_in_korba_coalfield"><b>Korba</b> is known for its coal mines such as Gevra Area (one of the biggest coal mines of Asia).</string>
    <string name="city_is_mainly_known_for_bhilai_steel_plant_sail_one_of_the_largest_steel_plants_in_india"><b>Bhilai</b> city is mainly known for Bhilai Steel Plant (SAIL), one of the largest steel plants in India.</string>
    <string name="champa"><b>Janjgir-Champa</b> is famous for Samleshwari Devi temple Kuldevi of champa and Kaleswar Nath Mahadev temple.</string>
    <string name="dhiti_welfare_foundation_volunteer_form">Dhiti welfare foundation.</string>
    <string name="making_a_peaceful_place">Making a peaceful place.</string>
    <string name="already_a_member">I\'m a member</string>
    <string name="name">Name<b> *</b></string>
    <string name="your_answer">Your answer</string>
    <string name="blood_group">Blood Group</string>
    <string name="city">CITY<b> *</b></string>
    <string name="contact">Contact *</string>
    <string name="address">Address *</string>
    <string name="qualification">Qualification *</string>
    <string name="profession">Profession *</string>
    <string name="email">Email *</string>
    <string name="age">DOB *</string>
    <string name="gender">Gender *</string>
    <string name="from_where_you_got_to_know_about_dhiti_welfare_foundation">From where you got to know about dhiti welfare foundation *</string>
    <string name="how_would_you_like_to_dedicate_your_time_for_dhiti">How would you like to dedicate your time for dhiti? *</string>
    <string name="suggest_how_you_can_help_dhiti">Suggest How you can help DHITI</string>
    <string name="do_you_want_to_start_dhiti_welfare_foundation_at_your_city">Do you want to start dhiti welfare foundation at your city?</string>
    <string name="would_you_like_to_represent_dhiti_foundation_in_your_school_college_workplace">Would you like to represent Dhiti foundation in your School/College/Workplace?</string>
    <string name="any_experience_in_community_service">Any Experience in Community Service?</string>
    <string name="why_would_you_like_to_join_dhiti_foundation">Why would you like to join Dhiti foundation? *</string>
    <string name="name_of_school_college">Name of School/College *</string>
    <string name="would_to_like_to_dedicate_your_talent_in_dhiti_if_yes_then_select_the_department_you_would_like_to_work_in">Would you like to dedicate your talent in Dhiti? If yes, then select the department you would like to work in. *</string>
    <string name="select">Tap to select</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="other">Other</string>
    <string name="no">No</string>
    <string name="later">Later</string>
    <string name="content_writting">CONTENT WRITTING</string>
    <string name="graphic_designing">GRAPHIC DESIGNING</string>
    <string name="event_management">EVENT MANAGEMENT</string>
    <string name="public_relation">PUBLIC RELATION</string>
    <string name="sponsership_and_finance">SPONSERSHIP AND FINANCE</string>
    <string name="creatives_amp_decoration_work"><![CDATA[CREATIVES & DECORATION WORK]]></string>
    <string name="photography">PHOTOGRAPHY</string>
    <string name="cultural_activity">CULTURAL ACTIVITY</string>
    <string name="submit">Submit</string>
    <string name="none_of_the_above">None of the above</string>
    <string name="checking">Checking…</string>
    <string name="none">None</string>
    <string name="we_are_looking_forward_to_your_form_please_wait_for_the_approval">We are looking forward to your form please wait for the approval.</string>
    <string name="task">Task</string>
    <string name="notes">Notes</string>
    <string name="home">Home</string>
    <string name="event">Events</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_to_see">Tap to see</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="your_task">Your Task</string>
    <string name="notifications">Updates</string>
    <string name="pub_notes">Announcement</string>
    <string name="todo">TODO</string>
    <string name="public_task">Group tasks</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here…</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="add_url">Add URL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_the_note">Are you sure you want to delete the note?</string>
    <string name="delete">Delete</string>
    <string name="enter_url">Enter URL</string>
    <string name="coustomize">Customize</string>
    <string name="let_s_get_rolling">Let\'s get rolling.</string>
    <string name="new_event">New event</string>
    <string name="title_event">Title event</string>
    <string name="add_location">Add location</string>
    <string name="choose_date">Choose date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_message">Add message</string>
    <string name="type_your_message_here">Type your message here..</string>
    <string name="event_preview">event_preview</string>
    <string name="tap_on_marked_date_to_view_event">Tap on marked date to view event.</string>
    <string name="name_">Name</string>
    <string name="new_announcement">New announcement</string>
    <string name="share">Share</string>
    <string name="add_bullet_points">Add Bullet points</string>
    <string name="attach_pdf">Add PDF</string>
    <string name="pdf_here">pdf here</string>
    <string name="category">Category</string>
    <string name="category_">category</string>
    <string name="city_">City</string>
    <string name="city__">city</string>
    <string name="attach_files">Add files</string>
    <string name="share_image">share Image</string>
    <string name="title">Title</string>
    <string name="type_announcement_here">Type content here…</string>
    <string name="empty">empty</string>
    <string name="empty_ntap_add_to_announcement">Tap on add for announcement</string>
    <string name="search_here">Search here</string>
    <string name="pdf">PDF</string>
    <string name="image">Image</string>
    <string name="chris_kruger">Chris Kruger</string>
    <string name="_08_22_2020_4_33pm">08/22/2020 – 4:33pm</string>
    <string name="focus_time">Focus Time</string>
    <string name="hi_guys_i_would_like_to_suggest_that_we_set_a_fixed_focus_time_within_the_company_where_you_can_workin_a_focus_mode_so_that_you_can_concentrate_in_your_work_more">Hi guys,I would like to suggest that we set a fixed focus time within the company ,where you can workin a focus mode so that you can concentrate in your work more.</string>
    <string name="bilaspur">Bilaspur</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="delete_announcement">Delete Announcement</string>
    <string name="edit_announcement">Edit Announcement</string>
    <string name="more">More</string>
    <string name="announcement">Announcement</string>
    <string name="created_by">Created by</string>
    <string name="last_modified">Last Modified</string>
    <string name="view_pdf">View PDF</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone</string>
    <string name="aadhar_no">Aadhar No.</string>
    <string name="please_complete_your_profile">Profile information.</string>
    <string name="complete_my_profile">Complete My Profile</string>
    <string name="change_name">Name</string>
    <string name="your_part_in_dhiti">Your part in dhiti</string>
    <string name="address_">Address</string>
    <string name="facebook_link">Facebook id</string>
    <string name="twitter_id_link">Twitter id</string>
    <string name="linkedin_id">Linkedin id</string>
    <string name="whatsapp_no">Whatsapp no.</string>
    <string name="instagram_id">Instagram id</string>
    <string name="space" />
    <string name="add_link">add link</string>
    <string name="hi">Hi!</string>
    <string name="dropdown">dropdown</string>
    <string name="view_fluid">view fluid</string>
    <string name="user_id">user_id</string>
    <string name="add_number">add number</string>
    <string name="filter_by">Filter by</string>
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="url">url</string>
    <string name="written_by">Written by</string>
    <string name="all">All</string>
    <string name="seen_by">Seen by:</string>
    <string name="pin">pin</string>
    <string name="have_you_paid_your_first_membership_fee">Have you paid your first membership fee?</string>
    <string name="yes">Yes</string>
    <string name="note_after_answering_this_you_can_proceed_for_your_membership_payment">Note: After answering this you can proceed for your membership payment.</string>
    <string name="hey_founder_organise_your_team">Control panel.</string>
    <string name="hang_tight_connecting_to_payment_gateway_don_t_press_back_or_close_this_window">Connecting to payment gateway. Don\'t press back or close this window</string>
    <string name="hang_tight">Hang tight!!</string>
    <string name="attach_file">Record file</string>
    <string name="send_ext">Send</string>
    <string name="caption">caption</string>
    <string name="open_the_file_with_default_browser">*Open the file with default browser.</string>
    <string name="head_1">Head 1</string>
    <string name="head_2">Head 2</string>
    <string name="head_3">Head 3</string>
    <string name="head_4">Head 4</string>
    <string name="head_5">Head 5</string>
    <string name="head_6">Head 6</string>
    <string name="head_7">Head 7</string>
    <string name="head_8">Head 8</string>
    <string name="head_9">Head 9</string>
    <string name="head_10">Head 10</string>
</resources>