<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_12sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:background="@drawable/content_an_bg"
    >

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pin"
        android:contentDescription="@string/pin" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_undraw_profile_pic_ic5t"
        android:transitionName="@string/adapter_dp_transition"
        app:layout_constraintStart_toEndOf="@+id/viewSubtitleIndicator"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <View
        android:id="@+id/viewSubtitleIndicator"
        android:layout_width="8dp"
        android:layout_height="0dp"
        android:layout_gravity="start"
        android:backgroundTint="@color/light_three"
        android:background="@drawable/background_subtitle_indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/chris_kruger"
        android:textColor="@color/colorDefaultNoteColor"
        android:textStyle="bold"
        android:transitionName="@string/adapter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_08_22_2020_4_33pm"
        android:textColor="@color/colorIcons"
        android:transitionName="@string/adapter_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/draw_four"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:layout_marginEnd="20dp"
        android:paddingEnd="20dp"
        android:maxLines="1"
        android:maxLength="15"
        android:ellipsize="end"
        android:paddingBottom="8dp"
        tool:text="About different sections of app."
        android:textColor="@color/black"
        android:transitionName="@string/adapter_category"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:transitionName="@string/adapter_content"
        android:text="@string/hi_guys_i_would_like_to_suggest_that_we_set_a_fixed_focus_time_within_the_company_where_you_can_workin_a_focus_mode_so_that_you_can_concentrate_in_your_work_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/draw_two"
        android:backgroundTint="@color/light_yellow_bg"
        android:paddingStart="30dp"
        android:paddingTop="5dp"
        android:paddingEnd="30dp"
        android:paddingBottom="5dp"
        android:transitionName="@string/adapter_pdf"
        android:text="@string/pdf"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/draw_two"
        android:backgroundTint="@color/light_yellow_bg"
        android:paddingStart="30dp"
        android:paddingTop="5dp"
        android:paddingEnd="30dp"
        android:transitionName="@string/adapter_image"
        android:paddingBottom="5dp"
        android:text="@string/image"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/bilaspur"
        android:transitionName="@string/adapter_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />


</androidx.constraintlayout.widget.ConstraintLayout>