<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/layout_grp_bg"
    android:backgroundTint="@color/veryLightGrey"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView94"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/attach_file"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/document_bg"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingBottom="15dp"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/colorQuickActionsBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/field_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:autofillHints="name"
        android:background="@drawable/profile_editext_shape"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/caption"
        android:textColor="@color/blue_grey_900"
        android:inputType="textMultiLine"
        android:maxHeight="300dp"
        android:padding="15dp"
        android:textSize="16sp"
        android:theme="@style/EditTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView94"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView95"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/send_ext"
        android:textColor="@color/blue"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView96"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView137" />

    <TextView
        android:id="@+id/textView137"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/design_brown_text"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/open_the_file_with_default_browser"
        app:layout_constraintEnd_toEndOf="@+id/field_goal"
        app:layout_constraintStart_toStartOf="@+id/field_goal"
        app:layout_constraintTop_toBottomOf="@+id/field_goal" />

    <TextView
        android:id="@+id/textView96"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/no"
        android:textColor="@color/red_400"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/textView95"
        app:layout_constraintTop_toTopOf="@+id/textView95" />

</androidx.constraintlayout.widget.ConstraintLayout>